# monolithic-sup

./: .gitignore  README.md  attention.py  benchmarks.mojo  construct_jaxpr.py  dataset.py  download-data  embedding.py  flash_attention.mojo  grid_dimensions.mojo  linearbwd.py  matrix_multiplication.py  mojoproject.toml  mse.py  myflash.py  mymse.py  pyproject.toml  sdpa.py  simple_flash_attention.mojo  simple_flash_attention_gpu.mojo  test_adamw.py  test_cross_entropy.py  test_flash_attention.mojo  tinystory.py  train_loop.py  train_single_matmul.py  triton_flash.py  vector_addition.mojo  weighted_sum.mojo
dsl/: play_compute_graph.py  play_type_graph.mojo  playground.mojo  primitives.mojo
linalg/: accumulate.mojo  other.mojo  transpose.mojo  utils.mojo
operations/: adamw.mojo  cross_entropy.mojo  layers.mojo  linear_backward.mojo  matrix_multiplication.mojo  mse_fwdbwd.mojo  myflash.mojo  mymse.mojo  scatter_add.mojo
sup/Mogg/MOGGKernelAPI/: MOGGKernelAPI.mojo
sup/Mogg/MOGGPrimitives/: MOGGPrimitives.mojo
sup/linalg/: _amd_gemm_gpu.mojo  fp8_quantization.mojo  grouped_matmul.mojo  matmul_gpu.mojo  matmul_sm90.mojo  matmul_tile_scheduler.mojo
sup/nn/: _amd_flash_attention_gpu.mojo  argmaxmin_gpu.mojo  conv.mojo  conv_transpose.mojo  conv_utils.mojo  flash_attention.mojo  fused_qk_rope.mojo  index_tensor.mojo  kv_cache.mojo  kv_cache_ragged.mojo  mha.mojo  mha_cross.mojo  mha_sm90.mojo  mha_tile_scheduler.mojo  mla.mojo  pad.mojo  repeat_interleave.mojo  topk.mojo  toppminp.mojo  toppminp_gpu.mojo
sup/quantization/: qmatmul.mojo  qmatmul_gpu.mojo  qmatmul_k.mojo
