[project]
authors = [{ name = "Marcel Rød", email = "roed@stanford.edu" }]
description = "Custom Operations Hackathon"
name = "custom-ops-hackathon"
requires-python = ">= 3.9,<3.13"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pixi.project]
channels = [
    "conda-forge",
    "https://conda.modular.com/max-nightly",
    "https://conda.modular.com/max",
    "https://repo.prefix.dev/modular-community",
]
platforms = ["linux-64", "osx-arm64", "linux-aarch64"]

[tool.pixi.tasks]
package = "mojo package operations/ -o operations.mojopkg"
matrix_multiplication = { cmd = "python matrix_multiplication.py", depends-on = ["package"] }
benchmarks = { cmd = "mojo benchmarks.mojo", depends-on = ["package"] }

[tool.pixi.dependencies]
max = "*"