[project]
authors = [{ name = "Marcel Rød", email = "roed@stanford.edu" }]
description = "Custom Operations Hackathon"
name = "custom-ops-hackathon"
requires-python = ">= 3.9,<3.13"
version = "0.1.0"
dependencies = [
    "jax>=0.6.0,<0.7",
    "optax>=0.2.4,<0.3",
    "torch>=2.7.0,<3",
    "transformers>=4.51.3,<5",
    "protobuf>=6.30.2,<7",
    "grpcio>=1.71.0,<2",
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pixi.project]
channels = [
    "conda-forge",
    "https://conda.modular.com/max-nightly",
    "https://conda.modular.com/max",
    "https://repo.prefix.dev/modular-community",
]
platforms = ["linux-64"]

[tool.pixi.tasks]
package = "mojo package operations/ -o operations.mojopkg"
matrix_multiplication = { cmd = "python matrix_multiplication.py", depends-on = [
    "package",
] }
flash_attention = { cmd = "mojo flash_attention.mojo", depends-on = [
    "package",
] }
test_attention_mojo = { cmd = "mojo test_flash_attention.mojo", depends-on = [
    "package",
] }
simple_flash = { cmd = "mojo simple_flash_attention.mojo", depends-on = [
    "package",
] }
mse = { cmd = "python mse.py", depends-on = ["package"] }
benchmarks = { cmd = "mojo benchmarks.mojo", depends-on = ["package"] }

[tool.pixi.dependencies]
max = "*"
